# Forgent-AI

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  REVIEW.md  index.html  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pearl_model_validation.yml
.github/workflows/: ci.yml  claude-issues.yml  docs.yml  installer-integration.yml  pypi-publish.yml
configs/forgent/: config.toml
deploy/docker/: .env.example  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  Dockerfile.sandbox  docker-compose.gpu.nvidia.yml  docker-compose.gpu.rocm.yml  docker-compose.yml
deploy/launchd/: com.forgent.plist
deploy/posthog/: posthog-hetzner-prep.sh
deploy/systemd/: forgent.service
deploy/windows/: README.md  forgent-service.ps1  install.ps1
docs/: desktop-auto-update.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  telemetry.md
docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md  security.md  skills.md
docs/deployment/: api-server.md  docker.md  index.md  launchd.md  systemd.md
docs/design/: 2026-05-05-apple-silicon-pearl-mining-design.md  2026-05-05-apple-silicon-pearl-mining-plan-v1.md  2026-05-05-pearl-coordination-discussion-draft.md  2026-05-05-vllm-pearl-mining-integration-design.md  2026-05-05-vllm-pearl-mining-integration-plan.md
docs/development/: contributing.md  mining-nvidia-validation.md  mining.md  pearl-model-enablement.md  release-checklist.md  roadmap.md
docs/getting-started/: configuration.md  install.md  installation.md  linux.md  macos.md  quickstart.md  snippets.md  windows-native.md  wsl2.md
docs/javascripts/: leaderboard-config.js  leaderboard.js
docs/learning/: ace.md
docs/overrides/: main.html
docs/showcase/: CONTRIBUTING.md  coding-assistant.md  cost-savings.md  discord-companion.md  index.md  morning-brief.md  persistent-memory.md
docs/testing/: agent-qa-runbook.md
docs/tutorials/: code-companion.md  deep-research.md  index.md  messaging-hub.md  scheduled-ops.md  skills-workflow.md
docs/user-guide/: agents.md  benchmarks.md  channels-and-connectors.md  channels.md  chat-simple.md  cli.md  code-assistant.md  deep-research.md  evaluations.md  llm-guided-spec-search.md  mcp-external-servers.md  memory.md  mining-apple-silicon.md  mining.md  morning-digest.md  pearl.md  python-sdk.md  scheduled-monitor.md  scheduler.md  security.md  skills.md  telemetry.md  tools.md
examples/browser_assistant/: README.md  browser_assistant.py
examples/code_companion/: README.md  debugger.py  reviewer.py  test_gen.py
examples/daily_digest/: README.md  daily_digest.py
examples/deep_research/: README.md  research.py
examples/doc_qa/: README.md  doc_qa.py
examples/forgent/: spec_search_quickstart.py
examples/messaging_hub/: README.md  smart_inbox.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/forgent-a2a/: Cargo.toml
rust/crates/forgent-a2a/src/: lib.rs
rust/crates/forgent-agents/: Cargo.toml
rust/crates/forgent-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  simple.rs  traits.rs  utils.rs
rust/crates/forgent-core/: Cargo.toml
rust/crates/forgent-core/src/: config.rs  error.rs  events.rs  hardware.rs  lib.rs  model_catalog.rs  registry.rs  types.rs
rust/crates/forgent-engine/: Cargo.toml
rust/crates/forgent-engine/src/: discovery.rs  engine_enum.rs  llamacpp.rs  ollama.rs  openai_compat.rs  rig_adapter.rs  sglang.rs  traits.rs  vllm.rs
rust/crates/forgent-learning/: Cargo.toml
rust/crates/forgent-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  orchestrator_types.rs  reward.rs  router_enum.rs  training_data.rs  traits.rs
rust/crates/forgent-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/forgent-mcp/: Cargo.toml
rust/crates/forgent-mcp/src/: server.rs
rust/crates/forgent-python/: Cargo.toml  pyproject.toml
rust/crates/forgent-python/src/: a2a.rs  agents.rs  core.rs  engine.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
rust/crates/forgent-recipes/: Cargo.toml
rust/crates/forgent-recipes/src/: lib.rs
rust/crates/forgent-scheduler/: Cargo.toml
rust/crates/forgent-scheduler/src/: lib.rs
rust/crates/forgent-security/: Cargo.toml
rust/crates/forgent-security/src/: audit.rs  guardrails.rs
rust/crates/forgent-sessions/: Cargo.toml
rust/crates/forgent-sessions/src/: lib.rs
rust/crates/forgent-skills/: Cargo.toml
rust/crates/forgent-skills/src/: lib.rs
rust/crates/forgent-telemetry/: Cargo.toml
rust/crates/forgent-telemetry/src/: aggregator.rs  instrumented.rs  store.rs
rust/crates/forgent-templates/: Cargo.toml
rust/crates/forgent-templates/src/: lib.rs
rust/crates/forgent-tools/: Cargo.toml
rust/crates/forgent-tools/src/: executor.rs  traits.rs
rust/crates/forgent-tools/src/builtin/: calculator.rs  file_tools.rs  git_tools.rs  http_tools.rs  mod.rs  shell.rs  think.rs
rust/crates/forgent-tools/src/storage/: backend_enum.rs  bm25.rs  colbert.rs  faiss.rs  hybrid.rs  knowledge_graph.rs  sqlite.rs  traits.rs
rust/crates/forgent-traces/: Cargo.toml
rust/crates/forgent-traces/src/: analyzer.rs  collector.rs  store.rs
rust/crates/forgent-workflow/: Cargo.toml
rust/crates/forgent-workflow/src/: lib.rs
scripts/: index_docs.py  oauth_all.py  quickstart.sh  smoke_framework_comparison.sh
src/: App.tsx  index.css
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py  test_vision.py
(+1448 files in other folders)
