[package]
name = "forgent-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
forgent-core = { path = "../forgent-core" }
forgent-engine = { path = "../forgent-engine" }
forgent-tools = { path = "../forgent-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rig-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
