[package]
name = "forgent-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
forgent-core = { path = "../forgent-core" }
forgent-tools = { path = "../forgent-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
