[package]
name = "forgent-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "forgent_rust"
crate-type = ["cdylib"]

[dependencies]
forgent-core = { path = "../forgent-core" }
forgent-engine = { path = "../forgent-engine" }
forgent-security = { path = "../forgent-security" }
forgent-tools = { path = "../forgent-tools" }
forgent-agents = { path = "../forgent-agents" }
forgent-traces = { path = "../forgent-traces" }
forgent-telemetry = { path = "../forgent-telemetry" }
forgent-learning = { path = "../forgent-learning" }
forgent-mcp = { path = "../forgent-mcp" }
forgent-sessions = { path = "../forgent-sessions" }
forgent-workflow = { path = "../forgent-workflow" }
forgent-skills = { path = "../forgent-skills" }
forgent-recipes = { path = "../forgent-recipes" }
forgent-templates = { path = "../forgent-templates" }
forgent-a2a = { path = "../forgent-a2a" }
forgent-scheduler = { path = "../forgent-scheduler" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
